[package]
name = "joker-stack"
version = "0.1.0"
authors = ["Phoenix Kahlo <kahlo.phoenix@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.1.26"
tokio = "0.1.19"
failure = "0.1.5"
through = "0.1.0"
log = "0.4.6"
corona = { git = "https://github.com/gretchenfrage/corona.git" }

[dev-dependencies]
pretty_env_logger = "0.3.0"

